MonthlyCategorySummary date field error resolved.